# hise-parallelism

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: orchestrator.Dockerfile  prometheus.yml  worker.Dockerfile
experiments/: aggregate_c1.py  exp01_smoke_test.py  exp02_carbon_replay.py  exp03_elastic_reconfig.py  exp07_zeus_pareto.py  exp08_perseus_vs_energy_partition.py  exp_c2_analytical_carbon.py  exp_c2_bert_sst2.py  exp_carbon_deferral_breakeven.py  exp_h2_endtoend_training.py  exp_h5c_real_trace.py  exp_h5c_real_trace_vs_green.py  exp_h5c_vs_green.py  exp_joint_real_workloads.py  exp_joint_sensitivity.py  exp_joint_vs_stacked.py  exp_realtrace_pareto.py  exp_realtrace_sensitivity.py  exp_reconfig_latency.py  exp_resume_breakdown.py  exp_resume_collapse.py  exp_scheduler_real_workload.py  exp_serverless_training_ledger.py  exp_throttle_pareto.py  exp_ws6_stage0_realtrace.py  fetch_electricitymaps_traces.py  fetch_real_carbon_traces.py  headline_stats.py  probe_nvml.py  profile_resnet18_real.py
experiments/baselines/: green.py  perseus.py  zeus.py
hasagi/energy/: __init__.py  regime.py  throttle_pareto.py  (+1 more)
hise/: __init__.py  config.py
k8s/: orchestrator.yaml  redis.yaml  worker-knative.yaml
tests/: test_baseline_green.py  test_baseline_perseus.py  test_baseline_zeus.py  test_carbon_policy.py  test_control_loop.py  test_deadline_selector.py  test_electricitymaps_trace.py  test_h2_endtoend_training.py  test_inter_batch.py  test_joint_partitioner.py  test_mss.py  test_partitioner.py  test_power_policy.py  test_primal_dual_policy.py  test_realtrace_pareto.py  test_resume_collapse.py  test_rl_policy.py  test_stats_bootstrap.py  test_throttle_curve.py  test_throttle_pareto.py  test_ws6_stage0_realtrace.py
traces/: README.md  synthetic_solar.csv
(+37 files in other folders)
